--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
                             <div class="col-12 col-md-6 p-0" style="margin-left:auto; margin-right:auto;">
                                 <div class="row item">
                                     <div class="col-4 p-0 pr-3 align-self-center">
-                                        <img src="assets/images/t1.jpg" alt="Person" class="person">
+                                        <img src="assets/images/t1.JPG" alt="Person" class="person">
                                     </div>
                                     <div class="col-8 align-self-center text-left" style="margin-left:auto; margin-right:auto;">
                                         <h4>Fouad Boutaya</h4>
