--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                         <div class="card">
                             <i class="icon icon-user"></i>
                             <h4>POLIKULTUR</h4>
-                            <p>Understanding the movement, of ideas, behaviours, and people.</p>
+                            <p>Understanding the movement of ideas, behaviours, and people.</p>
                             <a href="#"><i class="btn-icon pulse fas fas fa-arrow-right"></i></a>
                         </div>
                     </div>
@@ -306,7 +306,7 @@
                         <div class="card">
                             <i class="icon icon-note"></i>
                             <h4>POLINTEL</h4>
-                            <p>Adopt the best strategy to win the game.</p>
+                            <p>Understanding the terrains, and recommending tangibly.</p>
                             <a href="#"><i class="btn-icon pulse fas fas fa-arrow-right"></i></a>
                         </div>
                     </div>
