--- a/index.html
+++ b/index.html
@@ -475,10 +475,11 @@
                         <div class="quote">
                             <div class="quote-content">
                                 <h4 style="text-align:center;">Message from the founder</h4>
-                                <p>After receiving my PHD in Political Science, it became increasingly apparent that politics has been confusing for too long.</p>
-                                <p>Whether you're a government, or a company planning their next project, politics is a deciding factor on the success of a certain project. Unfortunately, it's been increasingly confusing and difficult to receive actionable political advice, that can determine the success of a project.</p>
-                                <p> That's why I created PoliSens, a political consulting firm/think tank that simplifies this process, and ensures you get actionable, directed feedback that will help you overcome the political hurdles blocking you from the success of a project.</p>
-                                <h5>Abdelkader Filali</h5>
+                                <p>One of the tasks of our Think Tank in this rapidly changing world of post Covid-19 politicization, supply chain security, rise of populism, future of Europe, Middle East impasse, and Indo Pacific tensions/alliances is offering research outcomes and policy proposals in a timely fashion, while providing deeply-considered proposals in relation to medium and long-term issues. </p>
+                                <p>We proceed steadily and continue to accumulate results in the dynamically changing economies, we revisit approaches to democracy, re-vision movement of ideas and people, and we comprehend new paradigms to development, environment, peace and security.</p>
+                                <p>Happily, PoliSens possesses extensive years of experience in the field of policy research in Latin America, Africa, Europe and Asia. </p>
+                                <p>Guided by this experience, when studying important issues, we will implement research programs and respond to the expectations placed upon us through the power of persistence and continuity.</p>
+                                <h5>Abdelkader Filali, <br>Founder and CEO</h5>
                             </div>
                             <i class="quote-right fas fa-quote-right"></i>
                         </div>
