--- a/index.html
+++ b/index.html
@@ -392,7 +392,6 @@
                                         </ul>
                                     </div>  
                                 </div>
-
                                 <div class="row item">
                                     <div class="col-4 p-0 pr-3 align-self-center">
                                         <img src="assets/images/t5.jpg" alt="Person" class="person">
@@ -400,6 +399,23 @@
                                     <div class="col-8 align-self-center text-left">
                                         <h4>Sylvain Paquet</h4>
                                         <p>East Asia Expert</p>
+                                        <ul class="navbar-nav social share-list ml-auto">
+                                            <li class="nav-item">
+                                                <a href="#" class="nav-link"><i class="fab fa-google"></i></a>
+                                            </li>
+                                            <li class="nav-item">
+                                                <a href="#" class="nav-link"><i class="fab fa-linkedin-in"></i></a>
+                                            </li>
+                                        </ul>
+                                    </div>  
+                                </div>
+                                <div class="row item">
+                                    <div class="col-4 p-0 pr-3 align-self-center">
+                                        <img src="assets/images/t6.jpg" alt="Person" class="person">
+                                    </div>
+                                    <div class="col-8 align-self-center text-left">
+                                        <h4>Willy Didié Foga Konefon</h4>
+                                        <p>Africa Expert</p>
                                         <ul class="navbar-nav social share-list ml-auto">
                                             <li class="nav-item">
                                                 <a href="#" class="nav-link"><i class="fab fa-google"></i></a>
@@ -429,32 +445,64 @@
                                         </ul>
                                     </div>  
                                 </div>
+                                    <div class="row item">
+                                        <div class="col-4 p-0 pr-3 align-self-center">
+                                            <img src="assets/images/t7.jpg" alt="Person" class="person">
+                                        </div>
+                                        <div class="col-8 align-self-center text-left" style="margin-left:auto; margin-right:auto;">
+                                            <h4>El Arbi Mrabet</h4>
+                                            <p>Executive Director Of Research, Canada and the South</p>
+                                            <ul class="navbar-nav social share-list ml-auto">
+                                                <li class="nav-item">
+                                                    <a href="#" class="nav-link"><i class="fab fa-google"></i></a>
+                                                </li>
+                                                <li class="nav-item">
+                                                    <a href="#" class="nav-link"><i class="fab fa-linkedin-in"></i></a>
+                                                </li>
+                                            </ul>
+                                        </div>  
+                                    </div>
+                        </div>
+                        </div>
+                        </div>
+                    </div>
 
+                    <!--
+                    <div data-aos="zoom-in" class="col-12 col-lg-4 align-self-end">
+                        <div class="quote">
+                            <div class="quote-content">
+                                <h4 style="text-align:center;">Message from the founder</h4>
+                                <p>One of the tasks of our Think Tank in this rapidly changing world of post Covid-19 politicization, supply chain security, rise of populism, future of Europe, Middle East impasse, and Indo Pacific tensions/alliances is offering research outcomes and policy proposals in a timely fashion, while providing deeply-considered proposals in relation to medium and long-term issues. </p>
+                                <p>We proceed steadily and continue to accumulate results in the dynamically changing economies, we revisit approaches to democracy, re-vision movement of ideas and people, and we comprehend new paradigms to development, environment, peace and security.</p>
+                                <p>Happily, PoliSens possesses extensive years of experience in the field of policy research in Latin America, Africa, Europe and Asia. </p>
+                                <p>Guided by this experience, when studying important issues, we will implement research programs and respond to the expectations placed upon us through the power of persistence and continuity.</p>
+                                <h5>Abdelkader Filali, <br>Founder and CEO</h5>
+                            </div>
+                            <i class="quote-right fas fa-quote-right"></i>
+                        </div>
+                    </div>
+                -->
+                </div>
+            </div>
+        </section>
+
+        <section id="team" class="section-4 odd highlights team image-right">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-lg-8 align-self-top text-center text-md-left text">
+                        <div class="row intro">
+                            <div class="col-12 p-0">
+                                <h2>Admin</h2>
+                                <p>Our team consists of leading experts in their fields. With extensive knoweldge and experience in our respected fields, we can provide results with the highest degree of precision.</p>
+                            </div>
+                        </div>
+                        <div class="row items text-left">
+                            <div class="col-12 col-md-6 p-0">
                                 <div class="row item">
                                     <div class="col-4 p-0 pr-3 align-self-center">
-                                        <img src="assets/images/t6.jpg" alt="Person" class="person">
+                                        <img src="assets/images/t1.jpg" alt="Person" class="person">
                                     </div>
                                     <div class="col-8 align-self-center text-left">
-                                        <h4>Willy Didié Foga Konefon</h4>
-                                        <p>Africa Expert</p>
-                                        <ul class="navbar-nav social share-list ml-auto">
-                                            <li class="nav-item">
-                                                <a href="#" class="nav-link"><i class="fab fa-google"></i></a>
-                                            </li>
-                                            <li class="nav-item">
-                                                <a href="#" class="nav-link"><i class="fab fa-linkedin-in"></i></a>
-                                            </li>
-                                        </ul>
-                                    </div>  
-                                </div>
-                            </div>
-
-                            <div class="col-12 col-md-6 p-0" style="margin-left:auto; margin-right:auto;">
-                                <div class="row item">
-                                    <div class="col-4 p-0 pr-3 align-self-center">
-                                        <img src="assets/images/t1.JPG" alt="Person" class="person">
-                                    </div>
-                                    <div class="col-8 align-self-center text-left" style="margin-left:auto; margin-right:auto;">
                                         <h4>Fouad Boutaya</h4>
                                         <p>Liason Officer</p>
                                         <ul class="navbar-nav social share-list ml-auto">
@@ -467,21 +515,8 @@
                                         </ul>
                                     </div>  
                                 </div>
-                            </div>
-
+                            </div>                        
                         </div>
-                    </div>
-                    <div data-aos="zoom-in" class="col-12 col-lg-4 align-self-end">
-                        <div class="quote">
-                            <div class="quote-content">
-                                <h4 style="text-align:center;">Message from the founder</h4>
-                                <p>One of the tasks of our Think Tank in this rapidly changing world of post Covid-19 politicization, supply chain security, rise of populism, future of Europe, Middle East impasse, and Indo Pacific tensions/alliances is offering research outcomes and policy proposals in a timely fashion, while providing deeply-considered proposals in relation to medium and long-term issues. </p>
-                                <p>We proceed steadily and continue to accumulate results in the dynamically changing economies, we revisit approaches to democracy, re-vision movement of ideas and people, and we comprehend new paradigms to development, environment, peace and security.</p>
-                                <p>Happily, PoliSens possesses extensive years of experience in the field of policy research in Latin America, Africa, Europe and Asia. </p>
-                                <p>Guided by this experience, when studying important issues, we will implement research programs and respond to the expectations placed upon us through the power of persistence and continuity.</p>
-                                <h5>Abdelkader Filali, <br>Founder and CEO</h5>
-                            </div>
-                            <i class="quote-right fas fa-quote-right"></i>
                         </div>
                     </div>
                 </div>
