--- a/index.html
+++ b/index.html
@@ -217,46 +217,16 @@
             </div>
         </section>
    
-     <!--
-        <section id="about" class="section-1 odd highlights image-right">
-            <div class="container">
-            <div class="row">
-                <div class="col-12 col-md-6 pr-md-5 align-self-center text-center text-md-left text">
-                    <div data-aos="fade-up"  class="row intro">
-                        <div class="col-12 p-0">
-                            <span class="pre-title m-auto m-md-0">About Us</span>
-                            <h2><span class="featured"><span>Our</span></span> Company</h2>
-                            <p>PoliSens is a research group that focusses on providing optimal practical solutions to high-level political challenges.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-md-6 pr-md-5 align-self-center text-center text-md-left text">
-                    <div class="row items">                             
-                        <div data-aos="fade-up" class="col-12 col-md-6 p-0 pr-md-4 item">
-                            <h4><i class="mr-2 icon-badge"></i>Tradition</h4>
-                            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
-                        </div>           
-                        <div data-aos="fade-up" class="col-12 col-md-6 p-0 item">
-                            <h4><i class="mr-2 icon-lock"></i>Security</h4>
-                            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
-                        </div> 
-                    </div>
-                    <div class="row items"> 
-                        <div data-aos="fade-up" class="col-12 col-md-6 p-0 item">
-                            <h4><i class="mr-2 icon-note"></i>Certificate</h4>
-                            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
-                        </div>  
-                        <div data-aos="fade-up" class="col-12 col-md-6 p-0 pr-md-4 item">
-                            <h4><i class="mr-2 icon-graduation"></i>Expertise</h4>
-                            <p>Our team consists of leading experts with extensive experience in their fields. Because of this, our team can provide results with the highest degree of precision.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            </div>
+
+        <section id="about" class="section-1 odd highlights image-right" style="margin-left:auto; margin-right:auto;">
+                        <h4 style="text-align:center;">Message from the founder</h4>
+                        <p style="text-align:center;">One of the tasks of our Think Tank in this rapidly changing world of post Covid-19 politicization, supply chain security, rise of populism, future of Europe, Middle East impasse, and Indo Pacific tensions/alliances is offering research outcomes and policy proposals in a timely fashion, while providing deeply-considered proposals in relation to medium and long-term issues. </p>
+                        <p style="text-align:center;">We proceed steadily and continue to accumulate results in the dynamically changing economies, we revisit approaches to democracy, re-vision movement of ideas and people, and we comprehend new paradigms to development, environment, peace and security.</p>
+                        <p style="text-align:center;">Happily, PoliSens possesses extensive years of experience in the field of policy research in Latin America, Africa, Europe and Asia. </p>
+                        <p style="text-align:center;">Guided by this experience, when studying important issues, we will implement research programs and respond to the expectations placed upon us through the power of persistence and continuity.</p>
+                        <h5 style="text-align:center;">Abdelkader Filali, <br>Founder and CEO</h5>
         </section>
-    -->
-        <!-- Services -->
+           <!-- Services -->
         <section id="services" class="section-2 offers">
             <div class="container">
                 <div class="row intro">
