--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 
         <section id="about" class="section-1 odd highlights image-right" style="margin-left:auto; margin-right:auto;">
                         <h4 style="text-align:center;">Message from the founder</h4>
-                        <p style="text-align:center;">One of the tasks of our Think Tank in this rapidly changing world of post Covid-19 politicization, supply chain security, rise of populism, future of Europe, Middle East impasse, and Indo Pacific tensions/alliances is offering research outcomes and policy proposals in a timely fashion, while providing deeply-considered proposals in relation to medium and long-term issues. </p>
+                        <p style="text-align:center;">One of the tasks of our Think Tank in this rapidly changing world of post Covid-19 politicization, supply chain security, rise of populism, future of Europe, Middle East impasse, Canada's new foreign policy, and Indo Pacific tensions/alliances is offering research outcomes and policy proposals in a timely fashion, while providing deeply-considered proposals in relation to medium and long-term issues. </p>
                         <p style="text-align:center;">We proceed steadily and continue to accumulate results in the dynamically changing economies, we revisit approaches to democracy, re-vision movement of ideas and people, and we comprehend new paradigms to development, environment, peace and security.</p>
                         <p style="text-align:center;">Happily, PoliSens possesses extensive years of experience in the field of policy research in Latin America, Africa, Europe and Asia. </p>
                         <p style="text-align:center;">Guided by this experience, when studying important issues, we will implement research programs and respond to the expectations placed upon us through the power of persistence and continuity.</p>
@@ -381,7 +381,7 @@
                                 </div>
                                 <div class="row item">
                                     <div class="col-4 p-0 pr-3 align-self-center">
-                                        <img src="assets/images/t6.jpg" alt="Person" class="person">
+                                        <img src="assets/images/t-6.JPG" alt="Person" class="person">
                                     </div>
                                     <div class="col-8 align-self-center text-left">
                                         <h4>Willy Didié Foga Konefon</h4>
@@ -400,7 +400,7 @@
                             <div class="col-12 col-md-6 p-0">
                                 <div class="row item">
                                     <div class="col-4 p-0 pr-3 align-self-center">
-                                        <img src="assets/images/t4.jpg" alt="Person" class="person">
+                                        <img src="assets/images/t-4.jpg" alt="Person" class="person">
                                     </div>
                                     <div class="col-8 align-self-center text-left">
                                         <h4>Imane Ouchen</h4>
@@ -470,11 +470,11 @@
                             <div class="col-12 col-md-6 p-0">
                                 <div class="row item">
                                     <div class="col-4 p-0 pr-3 align-self-center">
-                                        <img src="assets/images/t1.jpg" alt="Person" class="person">
+                                        <img src="assets/images/t-1.JPG" alt="Person" class="person">
                                     </div>
                                     <div class="col-8 align-self-center text-left">
                                         <h4>Fouad Boutaya</h4>
-                                        <p>Liason Officer</p>
+                                        <p>Liason Director</p>
                                         <ul class="navbar-nav social share-list ml-auto">
                                             <li class="nav-item">
                                                 <a href="#" class="nav-link"><i class="fab fa-google"></i></a>
