--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
                                                     <a href="#" class="nav-link"><i class="fab fa-google"></i></a>
                                                 </li>
                                                 <li class="nav-item">
-                                                    <a href="#" class="nav-link"><i class="fab fa-linkedin-in"></i></a>
+                                                    <a href="https://www.linkedin.com/in/el-arbi-mrabet-1423a112a" class="nav-link"><i class="fab fa-linkedin-in"></i></a>
                                                 </li>
                                             </ul>
                                         </div>  
