--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 <div class="container header">
 
                     <!-- Navbar Brand-->
-                            <img src="assets/images/logo.png" alt="PoliSens">
+                            <img src="assets/images/logo.png" alt="logo">
                         
                     <!-- Nav holder -->
                     <div class="ml-auto"></div>
