--- a/index.html
+++ b/index.html
@@ -140,6 +140,9 @@
                         <li class="nav-item">
                             <a href="#team" class="smooth-anchor nav-link">TEAM</a>
                         </li>
+                        <li class="nav-item">
+                            <a href="https://www.eventbrite.com/e/the-international-day-against-the-use-of-child-soldiers-tickets-139142919217" class="smooth-anchor nav-link">Upcoming Event</a>
+                        </li>
 
                         <!--
                         <li class="nav-item">
