--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
                             <div class="col-12 col-md-6 p-0">
                                 <div class="row item">
                                     <div class="col-4 p-0 pr-3 align-self-center">
-                                        <img src="assets/images/t.jpg" alt="Person" class="person">
+                                        <img src="assets/images/t.png" alt="Person" class="person">
                                     </div>
                                     <div class="col-8 align-self-center text-left">
                                         <h4>Abdelkader Filali</h4>
@@ -361,23 +361,6 @@
                                             </li>
                                             <li class="nav-item">
                                                 <a href="https://www.linkedin.com/in/abdelkader-filali-598a4b41/" class="nav-link"><i class="fab fa-linkedin-in"></i></a>
-                                            </li>
-                                        </ul>
-                                    </div>  
-                                </div>
-                                <div class="row item">
-                                    <div class="col-4 p-0 pr-3 align-self-center">
-                                        <img src="assets/images/t5.jpg" alt="Person" class="person">
-                                    </div>
-                                    <div class="col-8 align-self-center text-left">
-                                        <h4>Sylvain Paquet</h4>
-                                        <p>East Asia Expert</p>
-                                        <ul class="navbar-nav social share-list ml-auto">
-                                            <li class="nav-item">
-                                                <a href="#" class="nav-link"><i class="fab fa-google"></i></a>
-                                            </li>
-                                            <li class="nav-item">
-                                                <a href="#" class="nav-link"><i class="fab fa-linkedin-in"></i></a>
                                             </li>
                                         </ul>
                                     </div>  
@@ -418,23 +401,6 @@
                                         </ul>
                                     </div>  
                                 </div>
-                                    <div class="row item">
-                                        <div class="col-4 p-0 pr-3 align-self-center">
-                                            <img src="assets/images/t7.jpg" alt="Person" class="person">
-                                        </div>
-                                        <div class="col-8 align-self-center text-left" style="margin-left:auto; margin-right:auto;">
-                                            <h4>El Arbi Mrabet</h4>
-                                            <p>Executive Director Of Research, Canada and the South</p>
-                                            <ul class="navbar-nav social share-list ml-auto">
-                                                <li class="nav-item">
-                                                    <a href="#" class="nav-link"><i class="fab fa-google"></i></a>
-                                                </li>
-                                                <li class="nav-item">
-                                                    <a href="https://www.linkedin.com/in/el-arbi-mrabet-1423a112a" class="nav-link"><i class="fab fa-linkedin-in"></i></a>
-                                                </li>
-                                            </ul>
-                                        </div>  
-                                    </div>
                         </div>
                         </div>
                         </div>
