--- a/index.html
+++ b/index.html
@@ -227,7 +227,14 @@
                         <p style="text-align:center;">We proceed steadily and continue to accumulate results in the dynamically changing economies, we revisit approaches to democracy, re-vision movement of ideas and people, and we comprehend new paradigms to development, environment, peace and security.</p>
                         <p style="text-align:center;">Happily, PoliSens possesses extensive years of experience in the field of policy research in Latin America, Africa, Europe and Asia. </p>
                         <p style="text-align:center;">Guided by this experience, when studying important issues, we will implement research programs and respond to the expectations placed upon us through the power of persistence and continuity.</p>
-                        <h5 style="text-align:center;">Abdelkader Filali, <br>Founder and CEO</h5>
+                        <h5 style="text-align:center;">Abdelkader Filali, <br>Founder and CEO</h5> 
+                        <br>
+                        <img src="./assets/images/wit.png" width="400" height="400" style="display: block;margin-left: auto;margin-right: auto;">
+                        <p style="text-align:center; margin-left:40px;margin-right:40px;">Departing from Vancouver Principles on the Prevention of Exploitation and the Use of Children in Armed Conflicts, the<br> International Research Center for the Prevention of Child Soldiers was inaugurated in Dakhla Morocco. Polisens is one of the frontrunners for this initiative.</p>
+
+
+
+
         </section>
            <!-- Services -->
         <section id="services" class="section-2 offers">
