--- a/index.html
+++ b/index.html
@@ -227,10 +227,10 @@
                         <p style="text-align:center;">We proceed steadily and continue to accumulate results in the dynamically changing economies, we revisit approaches to democracy, re-vision movement of ideas and people, and we comprehend new paradigms to development, environment, peace and security.</p>
                         <p style="text-align:center;">Happily, PoliSens possesses extensive years of experience in the field of policy research in Latin America, Africa, Europe and Asia. </p>
                         <p style="text-align:center;">Guided by this experience, when studying important issues, we will implement research programs and respond to the expectations placed upon us through the power of persistence and continuity.</p>
-                        <h5 style="text-align:center;">Abdelkader Filali, <br>Founder and CEO</h5> 
+                        <h5 style="text-align:center;">Abdelkader Filali, Ph.D. <br>CEO</h5> 
                         <br>
                         <img src="./assets/images/wit.png" width="400" height="400" style="display: block;margin-left: auto;margin-right: auto;">
-                        <p style="text-align:center; margin-left:40px;margin-right:40px;">Departing from Vancouver Principles on the Prevention of Exploitation and the Use of Children in Armed Conflicts, the<br> International Research Center for the Prevention of Child Soldiers was inaugurated in Dakhla Morocco. Polisens is one of the frontrunners for this initiative.</p>
+                        <p style="text-align:center; margin-left:40px;margin-right:40px;">Departing from Vancouver Principles on the Prevention of Exploitation and the Use of Children in Armed Conflicts, the<br> <a href="http://irc-childsoldiers.org/">International Research Center for the Prevention of Child Soldiers</a> a was inaugurated in Dakhla Morocco. Polisens is one of the frontrunners for this initiative. Josée Provençal is the Executive Director of the centre. </p>
 
 
 
@@ -277,8 +277,8 @@
                     <div class="col-12 col-md-6 col-lg-4 item">
                         <div class="card">
                             <i class="icon icon-user"></i>
-                            <h4>POLIKULTUR</h4>
-                            <p>Analyzing the movement of ideas, behaviours, and people.</p>
+                            <h4>POLIPREVENTECS</h4>
+                            <p>Preventing the Exploitation of Child Soldiers in conflict zones.</p>
                             <a href="#"><i class="btn-icon pulse fas fas fa-arrow-right"></i></a>
                         </div>
                     </div>
@@ -360,8 +360,8 @@
                                         <img src="assets/images/t.png" alt="Person" class="person">
                                     </div>
                                     <div class="col-8 align-self-center text-left">
-                                        <h4>Abdelkader Filali</h4>
-                                        <p>Founder, CEO</p>
+                                        <h4>Abdelkader Filali, Ph.D. Poli Sci </h4>
+                                        <p>CEO</p>
                                         <ul class="navbar-nav social share-list ml-auto">
                                             <li class="nav-item">
                                                 <a href="mailto:afila017@uottawa,ca" class="nav-link"><i class="fab fa-google"></i></a>
@@ -703,7 +703,7 @@
                            
                         </div>
                         <div class="col-12 col-md-6 p-3 text-center text-lg-right">
-                            <p>© 2020 PoliSens</p>
+                            <p>© 2022 PoliSens</p>
                         </div>
                     </div>
                 </div>
